# vimeo-moodle-sync

./: .env.example  .gitignore  README.md  config.py  main.py  models.py  pyproject.toml  requirements.txt
app/: config.py  constants.py  main.py  models.py
app/embedding/: embed_video.py
app/integrations/moodle_client/: client.py  exceptions.py  models.py
app/integrations/vimeo_client/: client.py  models.py
app/matching/: match_date_section.py  match_session_recordings.py
app/parsing/: course_parser.py  recording_normalizer.py
app/scheduling/: schedule_day.py
clients/: vimeo_client.py
clients/vimeo_client/: __init__.py  client.py  models.py
course_matcher/: models.py  normalize.py
course_matcher/parsing/: course_parser.py  recording_normalizer.py
integrations/moodle_client/: client.py  models.py
integrations/vimeo_client/: client.py  models.py
matching/: match_date_section.py  match_session_recordings.py
parsing/: course_parser.py  recording_normalizer.py  weekday.py
resources/: video_embed_template.html  video_settings.json
scheduling/: schedule_day.py
